[tool.poetry]
name = "restq"
version = "0.1.0"
description = ""
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "5.3.1"
orjson = "^3.11.1"
colorama = "^0.4.6"
fastapi-utils = "^0.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
restq = "cli:app"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
